{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 118,
  "lineage": "b35e8886-c49e-64a8-8dae-c9d276284f38",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "DemoNAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cea8a954602d45c",
            "arn": "arn:aws:ec2:eu-central-1:343218202221:elastic-ip/eipalloc-05cea8a954602d45c",
            "association_id": "eipassoc-0dfd84ea2163416bd",
            "domain": "vpc",
            "id": "eipalloc-05cea8a954602d45c",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-06cd8cd5c9635f075",
            "private_dns": "ip-10-0-1-19.eu-central-1.compute.internal",
            "private_ip": "10.0.1.19",
            "public_dns": "ec2-18-153-89-14.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.153.89.14",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071f0796b00a3a89d",
            "arn": "arn:aws:ec2:eu-central-1:343218202221:instance/i-0e40a67ff6e441ba5",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e40a67ff6e441ba5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "demo-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0fb994dd55b4b35e6",
            "private_dns": "ip-10-0-1-244.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ec64aa0ae35f4f1d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-022336469e99ffbd0",
              "sg-0ce7b87e7bfef0dae"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05e653c962ec70d43",
            "tags": {
              "CostCenter": "123456",
              "Description": "Test instance",
              "Name": "Demo EC2 Instance"
            },
            "tags_all": {
              "CostCenter": "123456",
              "Description": "Test instance",
              "Name": "Demo EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-022336469e99ffbd0",
              "sg-0ce7b87e7bfef0dae"
            ]
          },
          "dependencies": [
            "aws_db_instance.postgresql",
            "aws_db_subnet_group.rds_private_subnet_group",
            "aws_key_pair.demo_key_pair",
            "aws_security_group.demo_sg",
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_subnet.DemoPrivateSubnetA",
            "aws_subnet.DemoPrivateSubnetB",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc",
            "tls_private_key.demo_private_key"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "DemoIGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:internet-gateway/igw-0f0d80aab2e364866",
            "id": "igw-0f0d80aab2e364866",
            "owner_id": "343218202221",
            "tags": {
              "Name": "DemoIGW"
            },
            "tags_all": {
              "Name": "DemoIGW"
            },
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "DemoNGW",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cea8a954602d45c",
            "association_id": "eipassoc-0dfd84ea2163416bd",
            "connectivity_type": "public",
            "id": "nat-0a703c9334963f71a",
            "network_interface_id": "eni-06cd8cd5c9635f075",
            "private_ip": "10.0.1.19",
            "public_ip": "18.153.89.14",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05e653c962ec70d43",
            "tags": {
              "Name": "Demo NAT Gateway"
            },
            "tags_all": {
              "Name": "Demo NAT Gateway"
            }
          },
          "dependencies": [
            "aws_eip.DemoNAT",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DemoPrivateRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:route-table/rtb-04795f1bcfdea90d4",
            "id": "rtb-04795f1bcfdea90d4",
            "owner_id": "343218202221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a703c9334963f71a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DemoPrivateRT"
            },
            "tags_all": {
              "Name": "DemoPrivateRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.DemoNAT",
            "aws_nat_gateway.DemoNGW",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "DemoPublicRT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:route-table/rtb-023c095cbc7c98a84",
            "id": "rtb-023c095cbc7c98a84",
            "owner_id": "343218202221",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f0d80aab2e364866",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "DemoPublicRT"
            },
            "tags_all": {
              "Name": "DemoPublicRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.DemoIGW",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DemoPrivateRTAssociationA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0428e5e635e22f56f",
            "route_table_id": "rtb-04795f1bcfdea90d4",
            "subnet_id": "subnet-00584496cf4ae6003"
          },
          "dependencies": [
            "aws_eip.DemoNAT",
            "aws_nat_gateway.DemoNGW",
            "aws_route_table.DemoPrivateRT",
            "aws_subnet.DemoPrivateSubnetA",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DemoPrivateRTAssociationB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00be1625d5c3a43b7",
            "route_table_id": "rtb-04795f1bcfdea90d4",
            "subnet_id": "subnet-0c896500d93fc82e0"
          },
          "dependencies": [
            "aws_eip.DemoNAT",
            "aws_nat_gateway.DemoNGW",
            "aws_route_table.DemoPrivateRT",
            "aws_subnet.DemoPrivateSubnetB",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DemoPublicRTAssociationA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d9589ab150fcf514",
            "route_table_id": "rtb-023c095cbc7c98a84",
            "subnet_id": "subnet-05e653c962ec70d43"
          },
          "dependencies": [
            "aws_internet_gateway.DemoIGW",
            "aws_route_table.DemoPublicRT",
            "aws_subnet.DemoPublicSubnetA",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "DemoPublicRTAssociationB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05dda420b0d32d107",
            "route_table_id": "rtb-023c095cbc7c98a84",
            "subnet_id": "subnet-0f52d624f1bbf1a7c"
          },
          "dependencies": [
            "aws_internet_gateway.DemoIGW",
            "aws_route_table.DemoPublicRT",
            "aws_subnet.DemoPublicSubnetB",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:security-group/sg-022336469e99ffbd0",
            "description": "Allow inbound and outbound traffic for EC2 instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-022336469e99ffbd0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow inbound SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-security-group",
            "name_prefix": "",
            "owner_id": "343218202221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "demo-security-group"
            },
            "tags_all": {
              "Name": "demo-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:security-group/sg-0ce7b87e7bfef0dae",
            "description": "Allow outbound traffic to EC2 from RDS",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05b820c1eb62e0e26"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "id": "sg-0ce7b87e7bfef0dae",
            "ingress": [],
            "name": "ec2-security-group",
            "name_prefix": "",
            "owner_id": "343218202221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-security-group"
            },
            "tags_all": {
              "Name": "ec2-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:security-group/sg-05b820c1eb62e0e26",
            "description": "Allow inbound traffic to RDS from EC2",
            "egress": [],
            "id": "sg-05b820c1eb62e0e26",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ce7b87e7bfef0dae"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "rds-security-group",
            "name_prefix": "",
            "owner_id": "343218202221",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-security-group"
            },
            "tags_all": {
              "Name": "rds-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_ec2_to_rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-4261769848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05b820c1eb62e0e26",
            "security_group_rule_id": "sgr-001d9923d460981ba",
            "self": false,
            "source_security_group_id": "sg-0ce7b87e7bfef0dae",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "from_rds_to_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 5432,
            "id": "sgrule-452624308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ce7b87e7bfef0dae",
            "security_group_rule_id": "sgr-0636bf8fbab7d9ff5",
            "self": false,
            "source_security_group_id": "sg-05b820c1eb62e0e26",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ec2_sg",
            "aws_security_group.rds_sg",
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DemoPrivateSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:subnet/subnet-00584496cf4ae6003",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00584496cf4ae6003",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218202221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoPrivateSubnetA"
            },
            "tags_all": {
              "Name": "DemoPrivateSubnetA"
            },
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DemoPrivateSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:subnet/subnet-0c896500d93fc82e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c896500d93fc82e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218202221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoPrivateSubnetB"
            },
            "tags_all": {
              "Name": "DemoPrivateSubnetB"
            },
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DemoPublicSubnetA",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:subnet/subnet-05e653c962ec70d43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05e653c962ec70d43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218202221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoPublicSubnetA"
            },
            "tags_all": {
              "Name": "DemoPublicSubnetA"
            },
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "DemoPublicSubnetB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:subnet/subnet-0f52d624f1bbf1a7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f52d624f1bbf1a7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "343218202221",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoPublicSubnetB"
            },
            "tags_all": {
              "Name": "DemoPublicSubnetB"
            },
            "vpc_id": "vpc-0a37c4d977f52f2d6"
          },
          "dependencies": [
            "aws_vpc.demovpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demovpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:343218202221:vpc/vpc-0a37c4d977f52f2d6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0540606623267dcbe",
            "default_route_table_id": "rtb-0af22d0b708097002",
            "default_security_group_id": "sg-0ea05662bf1aebebb",
            "dhcp_options_id": "dopt-09579550a09fd8744",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a37c4d977f52f2d6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af22d0b708097002",
            "owner_id": "343218202221",
            "tags": {
              "Name": "DemoVPC"
            },
            "tags_all": {
              "Name": "DemoVPC"
            }
          }
        }
      ]
    }
  ]
}